test(go-bindings): expand E2E test coverage and add performance benchmarks (#206)

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -161,6 +161,7 @@ jobs:
             reruns: ""
             upload_benchmarks: true
             parallel_opts: ""  # No parallel for benchmarks (performance measurement)
+            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py"  # Go benchmark runs in dedicated job
           - name: responses
             timeout: 45
             test_dirs: "e2e_test/responses"
@@ -170,6 +171,7 @@ jobs:
             setup_oracle: true
             setup_brave: true
             parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
+            ignore_opts: ""
           - name: e2e
             timeout: 45
             test_dirs: "e2e_test/router e2e_test/embeddings"
@@ -177,6 +179,7 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
+            ignore_opts: ""
           - name: chat-completions-sglang
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
@@ -185,6 +188,7 @@ jobs:
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: ""
             test_filter: ""
+            ignore_opts: ""
           - name: chat-completions-vllm
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
@@ -196,6 +200,7 @@ jobs:
             # Excludes: 5-grpc (logprobs=5), 2-None-grpc (n=2 with no logprobs), multiple_choices (n=2 tests)
             test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
             setup_vllm: true
+            ignore_opts: ""
     runs-on: k8s-runner-gpu
     timeout-minutes: ${{ matrix.timeout }}
     steps:
@@ -281,7 +286,7 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           bash scripts/ci_killall_sglang.sh "nuk_gpus"
-          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.test_dirs }} ${{ matrix.test_filter }} -s -vv -o log_cli=true --log-cli-level=INFO
+          ${{ matrix.env_vars }} ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" pytest ${{ matrix.reruns }} ${{ matrix.parallel_opts }} ${{ matrix.ignore_opts }} ${{ matrix.test_dirs }} ${{ matrix.test_filter }} -s -vv -o log_cli=true --log-cli-level=INFO
 
       - name: Upload benchmark results
         if: matrix.upload_benchmarks && success()
@@ -393,8 +398,75 @@ jobs:
           SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1 ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" \
             pytest --reruns 2 --reruns-delay 5 e2e_test/bindings_go -s -vv -o log_cli=true --log-cli-level=INFO
 
+  go-bindings-benchmark:
+    name: go-bindings-benchmark
+    needs: [check-ci, build-wheel]
+    if: needs.check-ci.outputs.should_run == 'true'
+    runs-on: k8s-runner-gpu
+    timeout-minutes: 32
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Clone SGLang repository
+        run: git clone https://github.com/sgl-project/sglang.git
+
+      - name: Install SGLang dependencies
+        run: |
+          cd sglang
+          sudo --preserve-env=PATH bash scripts/ci/cuda/ci_install_dependency.sh
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24'
+          cache: true
+          cache-dependency-path: bindings/golang/go.sum
+
+      - name: Download Go FFI library
+        uses: actions/download-artifact@v7
+        with:
+          name: go-ffi-library
+          path: bindings/golang/target/release/
+
+      - name: Verify Go FFI library
+        run: ls -la bindings/golang/target/release/libsmg_go.*
+
+      - name: Download wheel artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: smg-wheel
+          path: wheel/
+
+      - name: Install wheel
+        run: |
+          pip uninstall -y smg || true
+          pip install wheel/*.whl
+
+      - name: Install test dependencies
+        run: |
+          python3 -m pip install pytest pytest-rerunfailures httpx openai grpcio grpcio-health-checking numpy
+          python3 -m pip --no-cache-dir install --upgrade genai-bench==0.0.3
+
+      - name: Run Go bindings benchmark
+        run: |
+          bash scripts/ci_killall_sglang.sh "nuk_gpus"
+          export CGO_LDFLAGS="-L$(pwd)/bindings/golang/target/release"
+          export LD_LIBRARY_PATH="$(pwd)/bindings/golang/target/release:$LD_LIBRARY_PATH"
+          SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1 ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" \
+            pytest e2e_test/benchmarks/test_go_bindings_perf.py -s -vv -o log_cli=true --log-cli-level=INFO
+
+      - name: Upload benchmark results
+        if: success()
+        uses: actions/upload-artifact@v6
+        with:
+          name: genai-bench-results-go-bindings
+          path: benchmark_go_bindings/
+
   finish:
-    needs: [check-ci, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-unit-tests, go-bindings-e2e]
+    needs: [check-ci, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-unit-tests, go-bindings-e2e, go-bindings-benchmark]
     if: always()
     runs-on: ubuntu-latest
     permissions: {}
@@ -404,7 +476,7 @@ jobs:
           if [[ "${{ needs.check-ci.outputs.should_run }}" != "true" ]]; then
             echo "CI was skipped (external contributor without run-ci label)"
             exit 0
-          elif [[ "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-unit-tests.result }}" == "failure" || "${{ needs.go-bindings-e2e.result }}" == "failure" ]]; then
+          elif [[ "${{ needs.build-wheel.result }}" == "failure" || "${{ needs.unit-tests.result }}" == "failure" || "${{ needs.gateway-e2e.result }}" == "failure" || "${{ needs.go-unit-tests.result }}" == "failure" || "${{ needs.go-bindings-e2e.result }}" == "failure" || "${{ needs.go-bindings-benchmark.result }}" == "failure" ]]; then
             echo "One or more jobs failed"
             exit 1
           else
@@ -412,7 +484,7 @@ jobs:
           fi
 
   summarize-benchmarks:
-    needs: gateway-e2e
+    needs: [gateway-e2e, go-bindings-benchmark]
     runs-on: ubuntu-latest
     if: success()
     permissions:
@@ -421,10 +493,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v6
 
-    - name: Download benchmark results
+    - name: Download gateway benchmark results
       uses: actions/download-artifact@v7
       with:
         name: genai-bench-results-all-policies
+
+    - name: Download Go bindings benchmark results
+      uses: actions/download-artifact@v7
+      with:
+        name: genai-bench-results-go-bindings
+        path: benchmark_go_bindings
 
     - name: Create benchmark summary
       run: python3 e2e_test/benchmarks/summarize.py .
