--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -154,6 +154,8 @@ jobs:
         #   - { id: mistral-7b,  test_class: TestNightlyMistral7bMulti }
         #   - { id: embedding,   test_class: TestNightlyEmbeddingMulti }
         #   - { id: gpt-oss,     test_class: TestNightlyGptOssMulti }
+        #   - { id: llama-4-maverick-17b, test_class: TestNightlyLlama4MaverickMulti }
+        #   - { id: deepseek-v3-2-exp,    test_class: TestNightlyDeepseekV32Multi }
         # variant:
         #   - { id: sglang, runtime: sglang, grpc_only: "false" }
         #   - { id: vllm,   runtime: vllm,   grpc_only: "true" }
@@ -213,7 +215,7 @@ jobs:
           fi
 
           E2E_RUNTIME=${{ matrix.variant.runtime }} \
-          ROUTER_LOCAL_MODEL_PATH="/home/ubuntu/models" \
+          ROUTER_LOCAL_MODEL_PATH="/raid/models" \
             pytest e2e_test/benchmarks/test_nightly_perf.py \
               -k "$K_FILTER" \
               -s -vv -o log_cli=true --log-cli-level=INFO
