--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -3,7 +3,7 @@ name: Nightly Benchmark
 on:
   # TODO: revert before merge — PR trigger for testing
   pull_request:
-    branches: [ main ]
+    branches: [ main, nightly-bench ]
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
