--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -26,10 +26,36 @@ permissions:
 
 jobs:
   # ---------------------------------------------------------------------------
+  # Build wheel once and reuse across all jobs
+  # ---------------------------------------------------------------------------
+
+  build-wheel:
+    runs-on: 8-gpu-h200
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Setup Python venv
+        run: bash scripts/ci_setup_python_venv.sh
+
+      - name: Build Python wheel
+        run: bash scripts/ci_build_wheel.sh
+
+      - name: Upload wheel artifact
+        uses: actions/upload-artifact@v6
+        with:
+          name: smg-wheel
+          path: bindings/python/dist/*.whl
+          retention-days: 7
+
+  # ---------------------------------------------------------------------------
   # Single-worker: all models in one pytest session (model_pool manages GPUs)
   # ---------------------------------------------------------------------------
 
   single-sglang:
+    needs: build-wheel
     name: "single-worker / sglang (http+grpc)"
     if: github.event.inputs.runtime == '' || github.event.inputs.runtime == 'all' || github.event.inputs.runtime == 'sglang'
     runs-on: 8-gpu-h200
@@ -46,13 +72,17 @@ jobs:
           source .venv/bin/activate
           bash scripts/ci_install_sglang.sh
 
-      - name: Build and install wheel
-        run: |
-          bash scripts/ci_build_wheel.sh
-          pip install bindings/python/dist/*.whl
+      - name: Download wheel artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: smg-wheel
+          path: wheel/
 
-      - name: Install test dependencies
-        run: bash scripts/ci_install_e2e_deps.sh genai-bench
+      - name: Install wheel and test dependencies
+        run: |
+          pip uninstall -y smg || true
+          pip install wheel/*.whl
+          bash scripts/ci_install_e2e_deps.sh genai-bench
 
       - name: Run benchmarks
         env:
@@ -79,7 +109,7 @@ jobs:
 
   single-vllm:
     name: "single-worker / vllm (grpc)"
-    needs: single-sglang
+    needs: [build-wheel, single-sglang]
     if: always() && (github.event.inputs.runtime == '' || github.event.inputs.runtime == 'all' || github.event.inputs.runtime == 'vllm')
     runs-on: 8-gpu-h200
     timeout-minutes: 1440
@@ -93,13 +123,17 @@ jobs:
           source .venv/bin/activate
           bash scripts/ci_install_vllm.sh
 
-      - name: Build and install wheel
-        run: |
-          bash scripts/ci_build_wheel.sh
-          pip install bindings/python/dist/*.whl
+      - name: Download wheel artifact
+        uses: actions/download-artifact@v7
+        with:
+          name: smg-wheel
+          path: wheel/
 
-      - name: Install test dependencies
-        run: bash scripts/ci_install_e2e_deps.sh genai-bench
+      - name: Install wheel and test dependencies
+        run: |
+          pip uninstall -y smg || true
+          pip install wheel/*.whl
+          bash scripts/ci_install_e2e_deps.sh genai-bench
 
       - name: Run benchmarks
         env:
@@ -130,7 +164,7 @@ jobs:
 
   multi-worker:
     name: "${{ matrix.model.id }} / multi-${{ matrix.variant.id }}"
-    needs: [single-sglang, single-vllm]
+    needs: [build-wheel, single-sglang, single-vllm]
     if: always()
     runs-on: 8-gpu-h200
     timeout-minutes: 1440
@@ -192,15 +226,19 @@ jobs:
             bash scripts/ci_install_sglang.sh
           fi
 
-      - name: Build and install wheel
+      - name: Download wheel artifact
+        if: steps.filter.outputs.skip != 'true'
+        uses: actions/download-artifact@v7
+        with:
+          name: smg-wheel
+          path: wheel/
+
+      - name: Install wheel and test dependencies
         if: steps.filter.outputs.skip != 'true'
         run: |
-          bash scripts/ci_build_wheel.sh
-          pip install bindings/python/dist/*.whl
-
-      - name: Install test dependencies
-        if: steps.filter.outputs.skip != 'true'
-        run: bash scripts/ci_install_e2e_deps.sh genai-bench
+          pip uninstall -y smg || true
+          pip install wheel/*.whl
+          bash scripts/ci_install_e2e_deps.sh genai-bench
 
       - name: Run benchmark
         if: steps.filter.outputs.skip != 'true'
