fix(ci): add apt-get update before SGLang dependency install
The go-bindings-benchmark job fails because apt can't locate packages
(libnuma-dev, libssl-dev, etc.) when the sglang install script runs
apt install. Other CI steps work because they run apt-get update first.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -415,6 +415,7 @@ jobs:
 
       - name: Install SGLang dependencies
         run: |
+          sudo apt-get update
           cd sglang
           sudo --preserve-env=PATH bash scripts/ci/cuda/ci_install_dependency.sh
 
