fix(pre-commit): resolve check-yaml, detect-private-key, and codespell failures
What changed:
- .pre-commit-config.yaml: three hook configuration fixes

Why:
- `pre-commit run --all-files` was failing on three hooks:
  1. check-yaml failed on mkdocs.yml because it uses Python-specific
     YAML tag constructors (material.extensions.emoji.twemoji) that
     the safe YAML loader rejects.
  2. detect-private-key flagged model_gateway/tests/security/mtls_test.rs
     which contains a test key (not a real secret). The exclude pattern
     `^tests/` didn't match because the file is under `model_gateway/tests/`.
  3. codespell flagged `ser` as a typo for `set` in four Rust files where
     `ser` is short for serialization (Serde derive macros).

How:
- check-yaml: added `--unsafe` flag to allow Python-specific YAML tag
  constructors, which is safe since mkdocs.yml is a trusted config file.
- detect-private-key: changed exclude from `^tests/` to `.*tests/` so it
  matches test files in any subdirectory (e.g., model_gateway/tests/).
- codespell: added `ser` to the `-L` ignore list alongside existing
  false-positive words.

Refs: #258

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,13 +10,13 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
-        args: [--allow-multiple-documents]
+        args: [--allow-multiple-documents, --unsafe]
       - id: check-toml
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: check-shebang-scripts-are-executable
       - id: detect-private-key
-        exclude: ^tests/.*_test\.rs$
+        exclude: .*tests/.*_test\.rs$
       - id: mixed-line-ending
       - id: no-commit-to-branch
 
@@ -25,7 +25,7 @@ repos:
     hooks:
       - id: codespell
         additional_dependencies: ['tomli']
-        args: ['-L', 'cann,thi,makro,wil,rouge,PRIS,hel,te,ans']
+        args: ['-L', 'cann,thi,makro,wil,rouge,PRIS,hel,te,ans,ser']
         exclude: |
           (?x)^(
             src/proto/.*\.proto$|
