feat(e2e): add TensorRT-LLM gRPC backend support for CI
Add TRT-LLM as a third inference runtime alongside SGLang and vLLM,
following the existing vLLM pattern exactly.

What changed:
- e2e_test/infra/constants.py: add TRTLLM enum variant, update
  LOCAL_RUNTIMES, add is_trtllm() helper
- e2e_test/infra/__init__.py: export is_trtllm
- e2e_test/infra/model_pool.py: add _launch_trtllm_grpc_worker() and
  get_trtllm_grpc_worker() methods, wire is_trtllm() routing into
  _launch_model() gRPC dispatch
- e2e_test/fixtures/setup_backend.py: add _setup_trtllm_grpc_backend()
  fixture, route is_trtllm() in setup_backend()
- scripts/ci_install_trtllm.sh: new install script using
  TRTLLM_USE_PRECOMPILED=1 editable install from main branch (pulls
  pre-compiled C++/CUDA binaries from PyPI, layers gRPC Python source
  from git -- no Docker or C++ build toolchain required)
- .github/workflows/pr-test-rust.yml: add chat-completions-trtllm
  matrix entry with 60min timeout, E2E_RUNTIME=trtllm

Why:
TRT-LLM merged native gRPC server support (NVIDIA/TensorRT-LLM#11037,
Jan 29 2026) which is not yet in a pip release. This adds E2E test
coverage so we can validate the gateway's TRT-LLM gRPC integration
on H100 CI runners.

How:
The TRT-LLM worker launches via:
  python3 -m tensorrt_llm.commands.serve <model> --grpc --backend pytorch
  --host <host> --port <port> --tp_size <tp>
The --backend pytorch flag uses the PyTorch path, avoiding TRT engine
compilation. Health checks reuse the existing _grpc_health_check()
which falls back to connection test if health service returns
UNIMPLEMENTED. The CI install script uses TRTLLM_USE_PRECOMPILED=1
with an editable install from a shallow clone of main to get gRPC
support without building C++ from source.

Refs: NVIDIA/TensorRT-LLM#11037

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -216,6 +216,16 @@ jobs:
             test_filter: ""
             setup_vllm: true
             ignore_opts: ""
+          - name: chat-completions-trtllm
+            timeout: 90
+            test_dirs: "e2e_test/chat_completions"
+            extra_deps: "pytest-parallel py"
+            env_vars: "E2E_RUNTIME=trtllm SHOW_WORKER_LOGS=1 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: "--workers 1 --tests-per-worker 4"
+            test_filter: ""
+            setup_trtllm: true
+            ignore_opts: ""
     runs-on: k8s-runner-gpu
     timeout-minutes: ${{ matrix.timeout }}
     steps:
@@ -235,6 +245,8 @@ jobs:
           source .venv/bin/activate
           if [ "${{ matrix.setup_vllm }}" == "true" ]; then
             bash scripts/ci_install_vllm.sh
+          elif [ "${{ matrix.setup_trtllm }}" == "true" ]; then
+            bash scripts/ci_install_trtllm.sh
           else
             bash scripts/ci_install_sglang.sh
           fi
