--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -19,7 +19,7 @@ on:
 
 concurrency:
   group: nightly-benchmark
-  cancel-in-progress: true #TODO: revert before merge — cancel-in-progress: false
+  cancel-in-progress: false
 
 permissions:
   contents: read
@@ -60,7 +60,7 @@ jobs:
   single-sglang:
     needs: build-wheel
     name: "single-worker / sglang (http+grpc)"
-    if: false #github.event.inputs.runtime == '' || github.event.inputs.runtime == 'all' || github.event.inputs.runtime == 'sglang'
+    if: github.event.inputs.runtime == '' || github.event.inputs.runtime == 'all' || github.event.inputs.runtime == 'sglang'
     runs-on: 8-gpu-h200
     timeout-minutes: 1440
     steps:
@@ -113,7 +113,7 @@ jobs:
   single-vllm:
     name: "single-worker / vllm (grpc)"
     needs: [build-wheel, single-sglang]
-    if: false #always() && (github.event.inputs.runtime == '' || github.event.inputs.runtime == 'all' || github.event.inputs.runtime == 'vllm')
+    if: always() && (github.event.inputs.runtime == '' || github.event.inputs.runtime == 'all' || github.event.inputs.runtime == 'vllm')
     runs-on: 8-gpu-h200
     timeout-minutes: 1440
     steps:
@@ -176,15 +176,15 @@ jobs:
       max-parallel: 1
       matrix:
         model:
-          # - { id: llama-8b,    test_class: TestNightlyLlama8bMulti }
+          - { id: llama-8b,    test_class: TestNightlyLlama8bMulti }
           # - { id: llama-1b,    test_class: TestNightlyLlama1bMulti }
-          # - { id: qwen-7b,     test_class: TestNightlyQwen7bMulti }
+          - { id: qwen-7b,     test_class: TestNightlyQwen7bMulti }
           # - { id: qwen-14b,    test_class: TestNightlyQwen14bMulti }
           # - { id: deepseek-7b, test_class: TestNightlyDeepseek7bMulti }
           # - { id: qwen-30b,    test_class: TestNightlyQwen30bMulti }
           # - { id: mistral-7b,  test_class: TestNightlyMistral7bMulti }
           # - { id: gpt-oss,     test_class: TestNightlyGptOssMulti }
-          - { id: llama-4-maverick-17b, test_class: TestNightlyLlama4MaverickMulti }
+          # - { id: llama-4-maverick-17b, test_class: TestNightlyLlama4MaverickMulti }
         variant:
           - { id: sglang, runtime: sglang, grpc_only: "false" }
           - { id: vllm,   runtime: vllm,   grpc_only: "true" }
@@ -286,4 +286,4 @@ jobs:
           merge-multiple: true
 
       - name: Create benchmark summary
-        run: python3 e2e_test/benchmarks/summarize.py .
+        run: python3 e2e_test/benchmarks/nightly_summarize.py .
