perf(ci): add restore-keys fallback for wheel cache
Allows PRs to read wheel cache from main branch as fallback.

Cache behavior:
- Exact key match → cache-hit=true → skip build
- Partial match (restore-keys) → cache-hit=false → build runs
- No match → cache-hit=false → build runs

The restore-keys fallback helps new PRs benefit from main's cache
even if their source hash differs slightly.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -52,6 +52,8 @@ jobs:
             bindings/python/dist/*.whl
             bindings/golang/target/release/libsmg_go.*
           key: wheel-${{ runner.os }}-${{ hashFiles('Cargo.lock', '**/Cargo.toml', 'auth/src/**', 'bindings/python/src/**', 'data_connector/src/**', 'grpc_client/src/**', 'kv_index/src/**', 'mcp/src/**', 'mesh/src/**', 'model_gateway/src/**', 'multimodal/src/**', 'protocols/src/**', 'reasoning_parser/src/**', 'tokenizer/src/**', 'tool_parser/src/**', 'wasm/src/**', 'workflow/src/**', 'bindings/golang/src/**') }}
+          restore-keys: |
+            wheel-${{ runner.os }}-
 
       - name: Setup Rust
         if: steps.cache-wheel.outputs.cache-hit != 'true'
