fix(ci): add setup-python for wheel test step on cache hit
When wheel cache hits, the build step is skipped which means
ci_setup_python_venv.sh doesn't run. The test step needs pip
to verify the cached wheel works.

Add setup-python action that always runs to provide pip for testing.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -83,6 +83,11 @@ jobs:
         if: always() && steps.cache-wheel.outputs.cache-hit != 'true'
         run: sccache --show-stats
 
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.12"
+
       - name: Test wheel install
         run: |
           pip install bindings/python/dist/*.whl
