--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -261,6 +261,13 @@ jobs:
           path: ~/.cache/pip/wheels
           key: flash-attn-${{ runner.os }}-py310-${{ hashFiles('scripts/ci_install_vllm.sh') }}
 
+      - name: Cache TRT-LLM wheel
+        if: matrix.setup_trtllm
+        uses: actions/cache@v4
+        with:
+          path: /tmp/trtllm-wheel
+          key: trtllm-wheel-${{ runner.os }}-cuda13-${{ hashFiles('scripts/ci_install_trtllm.sh') }}
+
       - name: Install inference backend
         run: |
           bash scripts/ci_setup_python_venv.sh
